<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Lista de alarmas</string>
	<string name="menu_add_alarma">Añadir alarma</string>
	<string name="menu_del_alarma">Borrar alarmas</string>
	<string name="menu_add_sonido">Añadir sonido</string>
	<string name="menu_add_sonido1">Añadir sonido (paso 1 de 3)</string>
	<string name="menu_add_sonido2">Añadir sonido (paso 2 de 3)</string>
	<string name="menu_add_sonido3">Añadir sonido (paso 3 de 3)</string>
	<string name="menu_del_sonidos">Borrar todos los sonidos</string>
	<string name="menu_edit_alarma">Editar alarma</string>
	<string name="menu_del_todas_alarmas">Borrar todas alarmas</string>
	<string name="menu_del_notificaciones">Borrar notificaciones</string>
	<string name="menu_copiar_notificaciones">Copiar notificaciones a la SD</string>
	<string name="menu_lista_notificaciones">Lista de notificaciones</string>
	<string name="menu_detalle_notificacion">Detalles de la notificación</string>
	<string name="menu_config">Configuración</string>
	<string name="menu_sonidos">Sonidos</string>
	<string name="menu_info">Mostrar ayuda</string>
	<string name="aceptar">Aceptar</string>
	<string name="cancelar">Cancelar</string>
	<string name="bt_sonidos">Configurar sonidos</string>
	<string name="bt_restaurar">Restaurar valores iniciales</string>
	<string name="bt_siguiente">Siguiente</string>
	<string name="bt_procesar_ruido">Procesar Ruido de Fondo</string>
	<string name="bt_procesar_sonido">Procesar Sonido</string>
	<string name="tv_nombre">Nombre:</string>
	<string name="et_nombre">Sin nombre</string>
	<string name="et_desc">Sin descripción</string>
	<string name="tv_desc">Descripción:</string>
	<string name="sp_sonido">Elige un sonido</string>
	<string name="tv_addSonido">Añadir sonido</string>
	<string name="tv_sonidoPrueba">Sonido de prueba</string>
	<string name="tv_lugar">Lugar de la alarma:</string>
	<string name="tv_radio">Radio de la alarma en metros:</string>
	<string name="tv_procesar_ruido">El paso 2 consiste en analizar el ruido de fondo,
		haz clic en el botón \"Procesar Ruido de Fondo\" cuando creas que hay
		el menor ruido de
		fondo posible.\nEste proceso tardará unos segundos.</string>
	<string name="tv_procesar_timbre">El paso 3 consiste en analizar el sonido en
		concreto,
		haz clic en el botón \"Procesar Sonido\" y acto seguido haz
		que suene el sonido que quieras detectar.\nEste proceso tardará unos segundos.</string>
	<string name="desc_locale">¿Utilizar ubicación?</string>
	<string name="et_lugar">Ubicación actual</string>
	<string name="desc_sonora">Opciones de la notificación</string>
	<string name="sp_radio">Radio para la alarma en metros</string>
	<string name="tv_tipo">¿Tipo de sonido?</string>
	<string name="tv_tipo1">Fuerte</string>
	<string name="tv_tipo2">Muy Fuerte</string>
	<string name="tv_fuerte">Valor del umbral "Fuerte":</string>
	<string name="tv_muyFuerte">Valor del umbral "Muy Fuerte":</string>
	<string name="ayuda">Haz clic en Menú para ver las opciones.</string>
	<string name="ayudaNotificacion">Haz clic en la lista para ver el lugar de la alarma oMenú para ver las opciones.</string>
	<string name="ayudaSonidos">Haz clic en el sonido para borrarlo o en Menú para ver las opciones.</string>
	<string name="ayudaLista">Haz clic en la lista para borrar o en Menú para ver las opciones.</string>
	<string name="ayudaEditar">Haz clic en la lista para editar.</string>
</resources>
