<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/mainLay"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout android:id="@+id/addSonido"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView android:text="@string/tv_procesar_timbre"
			android:id="@+id/tv_procesar_timbre" android:layout_width="wrap_content"
			android:layout_height="wrap_content"></TextView>
		<Button android:id="@+id/bt_procesar_sonido" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/bt_procesar_sonido" />
		<TableLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true" android:stretchColumns="0,1">
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<Button android:id="@+id/bt_siguiente" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/bt_siguiente" />
				<Button android:id="@+id/botonCancelar" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/cancelar" />
			</TableRow>
		</TableLayout>
	</LinearLayout>
</LinearLayout>
